# lumen

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .goreleaser.yaml  ASSESSMENT.md  AUDIT-REPORT.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATE_LEDGER.md  ENHANCEMENTS.md  FILE-INDEX.md  HANDOFF-V2.md  HANDOFF.md  IMPORT_LEDGER.md  LEGAL.md  LICENSE  MY-WORK.md  Makefile  NOTICE  README.md  ROADMAP-13.md  SBOM.spdx.json  SOURCE_LOCK.json  VERSION  WORKSPACE_PLAN.md  go.mod  go.sum  install.sh  lumen.toml  规划-生产级终极方案书-v1.md  规划书-打磨.md
.goal-verify-scratch/: eval-run1.json  eval-run2.json
agent/crates/codegen/lumen-discipline/: Cargo.toml
agent/crates/codegen/lumen-discipline/src/: cache.rs  cache_shape.rs  delivery.rs  lib.rs  provider_strategy.rs  request_prefix.rs  session_cache.rs  storm.rs  wire.rs
agent/crates/codegen/lumen-verify/: Cargo.toml
agent/crates/codegen/lumen-verify/src/: config.rs  detect.rs  lib.rs  repair.rs  runner.rs  steps.rs
agent/crates/codegen/xai-grok-science/: Cargo.toml
agent/crates/codegen/xai-grok-science/fixtures/: connector_alphafold_prediction.json  connector_arrayexpress_search.json  connector_arxiv_search.xml  connector_bindingdb_ligands.json  connector_biogrid_interactions.json  connector_biorxiv_doi.json  connector_chebi_search.json  connector_chembl_search.json  connector_clinvar_esearch.json  connector_clinvar_esummary.json  connector_crossref_works.json  connector_dbsnp_esearch.json  connector_dbsnp_esummary.json  connector_depmap_catalog.json  connector_ensembl_lookup.json  connector_europepmc_search.json  connector_eutils_esearch.json  connector_expression_atlas_catalog.json  connector_geo_esearch.json  connector_geo_esummary.json  connector_gnomad_gene.json  connector_gtex_gene.json  connector_gtopdb_ligands.json  connector_hpa_search.json  connector_intact_search.json  connector_interpro_search.json  connector_kegg_find.txt  connector_mygene_search.json  connector_myvariant_search.json  connector_ncbi_gene_esearch.json  connector_ncbi_gene_esummary.json  connector_openalex_search.json  connector_opentargets_search.json  connector_pdbe_search.json  connector_pubchem_cids.json  connector_pubchem_props.json  connector_pubmed_esearch.json  connector_pubmed_esummary.json  connector_rcsb_pdb_search.json  connector_reactome_search.json  (+10 more)
agent/crates/codegen/xai-grok-science/src/: api.rs  connector.rs  connectors.rs  csv.rs  import.rs  lib.rs  preview.rs  review.rs  transport.rs
agent/crates/codegen/xai-grok-science/src/connectors/: adapter.rs  alphafold.rs  arrayexpress.rs  arxiv.rs  bindingdb.rs  biogrid.rs  biorxiv.rs  chebi.rs  chembl.rs  clinvar.rs  crossref.rs  dbsnp.rs  depmap.rs  ensembl.rs  europepmc.rs  eutils.rs  expression_atlas.rs  fetch.rs  geo.rs  gnomad.rs  gtex.rs  gtopdb.rs  hpa.rs  intact.rs  interpro.rs  kegg.rs  mygene.rs  myvariant.rs  ncbi_gene.rs  openalex.rs  opentargets.rs  pdbe.rs  pubchem.rs  pubmed.rs  rcsb_pdb.rs  reactome.rs  semantic_scholar.rs  sifts.rs  single_cell_atlas.rs  string_db.rs  (+4 more)
desktop/lumen-science/src-tauri/: Cargo.toml  tauri.conf.json
desktop/lumen-science/src-tauri/capabilities/: default.json
desktop/lumen-science/src-tauri/icons/: icon.icns
desktop/lumen-science/src-tauri/src/: lib.rs  main.rs
docs/: BOARD.md  (+20 more)
(+1704 files in other folders)
