[package]
name = "lumen-science-desktop"
version = "1.2.0-science-beta.1"
description = "Lumen Science Acceptance desktop shell"
authors = ["Lumen"]
edition = "2021"

[lib]
name = "lumen_science_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
