[package]
name = "lumen-discipline"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Lumen M2 loop discipline: Storm, RepeatSuccess, Delivery/Goal gates, cache format"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true, features = ["force-soft"] }

[dev-dependencies]
