[package]
name = "lumen-discipline"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Lumen loop discipline: Storm, Delivery/Goal, DeepSeek-first prompt-cache (shape, multi-provider strategy, session tracker)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true, features = ["force-soft"] }

[dev-dependencies]
