[package]
name = "lumen-verify"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Lumen verify-after-edit — detect language, run build/vet/test, parse diagnostics, self-repair up to 3 cycles"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dunce = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
which = { workspace = true }
wait-timeout = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
