[package]
name = "xai-grok-science"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
