[package]
name = "xai-grok-science"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
